# Pleb_Signer

./: .gitignore  BUNKER_IMPLEMENTATION.md  Cargo.toml  LICENSE  README.md  RELEASE_SUMMARY.md  check_bunker_detailed.sh  test_bunker.sh
.github/workflows/: release.yml
assets/: com.plebsigner.Signer.service  com.plebsigner.Signer.xml  pleb-signer.desktop
docs/: CLIENT_INTEGRATION.md
examples/: client_example.rs  nip04_encryption.rs  sign_event.rs
packaging/: pleb-signer.spec
packaging/arch/: PKGBUILD
packaging/debian/: control  postinst  postrm
scripts/: build-packages.sh  build-release.sh  enable-autostart.sh  install.sh
src/: app.rs  bunker.rs  client.rs  config.rs  dbus.rs  error.rs  keys.rs  main.rs  permissions.rs  signing.rs  tray.rs  ui.rs
